237. Model 6: Building, training and evaluating a transfer learning model for NLP

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -3452,11 +3452,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BV76D_LX2MVP",
-        "outputId": "e574c0b7-f7da-48c9-dede-d5b5a2c92bd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BV76D_LX2MVP",
+        "outputId": "e574c0b7-f7da-48c9-dede-d5b5a2c92bd5"
       },
       "source": [
         "import tensorflow_hub as hub\n",
@@ -3489,11 +3489,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ES8mdLRg5N0v",
-        "outputId": "19ac4126-6f9e-499b-cc0f-412faf6a3e94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ES8mdLRg5N0v",
+        "outputId": "19ac4126-6f9e-499b-cc0f-412faf6a3e94"
       },
       "source": [
         "embed_samples[0].shape  # 512 feature vector"
@@ -3511,6 +3511,255 @@
             "tags": []
           },
           "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2L5T2P_S5tqG"
+      },
+      "source": [
+        "# Create a Keras Layer using the USE pretrained layer from tensorflow hub\n",
+        "\n",
+        "sentence_encoder_layer = hub.KerasLayer(\"https://tfhub.dev/google/universal-sentence-encoder/4\", \n",
+        "                                        input_shape=[],\n",
+        "                                        dtype=\"string\",\n",
+        "                                        trainable=False, # default value\n",
+        "                                        name=\"USE\")\n"
+      ],
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2q-Jua317GqY"
+      },
+      "source": [
+        "# Create model using the Sequential API\n",
+        "\n",
+        "model_6 = tf.keras.Sequential([\n",
+        "        sentence_encoder_layer,\n",
+        "        #layers.Dense(64, activation=\"relu\"),\n",
+        "        layers.Dense(1, activation=\"sigmoid\", name=\"output_layer\")                                       \n",
+        "], name=\"model_6_USE\")\n",
+        "\n",
+        "# Compile the model\n",
+        "model_6.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])"
+      ],
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FvM57WHg7sHr",
+        "outputId": "f9d4e340-c62d-4c85-89cc-936d68c3da23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check model summary\n",
+        "model_6.summary()"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_6_USE\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "USE (KerasLayer)             (None, 512)               256797824 \n",
+            "_________________________________________________________________\n",
+            "dense_7 (Dense)              (None, 64)                32832     \n",
+            "_________________________________________________________________\n",
+            "dense_8 (Dense)              (None, 1)                 65        \n",
+            "=================================================================\n",
+            "Total params: 256,830,721\n",
+            "Trainable params: 32,897\n",
+            "Non-trainable params: 256,797,824\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wog0ULzH7vr4",
+        "outputId": "0bd40b92-c300-4566-f8c2-3cd420453ad6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Train a classifer model on top of USE pretrained embeddings\n",
+        "model_6_history = model_6.fit(train_sentences, \n",
+        "                              y=train_labels,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
+        "                                                                     experiment_name=\"tf_hub_sentence_encoder\")])\n"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/tf_hub_sentence_encoder/20210806-053619\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 5s 17ms/step - loss: 0.5067 - accuracy: 0.7755 - val_loss: 0.4435 - val_accuracy: 0.8018\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.4147 - accuracy: 0.8137 - val_loss: 0.4363 - val_accuracy: 0.8110\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 2s 12ms/step - loss: 0.4002 - accuracy: 0.8240 - val_loss: 0.4347 - val_accuracy: 0.8097\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.3916 - accuracy: 0.8291 - val_loss: 0.4272 - val_accuracy: 0.8136\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 3s 12ms/step - loss: 0.3838 - accuracy: 0.8313 - val_loss: 0.4282 - val_accuracy: 0.8058\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dB3T5Z-j8YxA",
+        "outputId": "e90eff7b-17ab-4683-8fcc-2a057d0dcf5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the USE TF Hub Model predictions\n",
+        "model_6_pred_probs = model_6.predict(val_sentences)\n",
+        "model_6_pred_probs[:10]"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.39113456],\n",
+              "       [0.68845195],\n",
+              "       [0.8499171 ],\n",
+              "       [0.3493935 ],\n",
+              "       [0.6480116 ],\n",
+              "       [0.74636394],\n",
+              "       [0.8093507 ],\n",
+              "       [0.8459836 ],\n",
+              "       [0.7521083 ],\n",
+              "       [0.19804439]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-LrGfl6z8i5h",
+        "outputId": "d3c4d068-840f-4e4a-b38a-190ff0328498",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert prediction probabilities to labels\n",
+        "model_6_preds = tf.squeeze(tf.round(model_6_pred_probs))\n",
+        "model_6_preds[:10]"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 1., 1., 1., 1., 1., 0.], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CU-_n54N8vrJ",
+        "outputId": "252093dc-a423-4fce-8bc3-a87f010aa80a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate the USE TF model performance\n",
+        "model_6_results = calculate_results(y_true=val_labels,\n",
+        "                                    y_pred=model_6_preds)\n",
+        "model_6_results"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 79.13385826771653,\n",
+              " 'f1': 0.790332908959664,\n",
+              " 'precision': 0.791659328034437,\n",
+              " 'recall': 0.7913385826771654}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sQK6M9jZ9CLd",
+        "outputId": "03083f3f-639f-4f0c-90f6-e69686036c07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "baseline_results"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 79.26509186351706,\n",
+              " 'f1': 0.7862189758049549,\n",
+              " 'precision': 0.8111390004213173,\n",
+              " 'recall': 0.7926509186351706}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 105
         }
       ]
     }
