238. Preparing subsets of data for model 7 (same as model 6 but 10% of data)

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -3541,7 +3541,7 @@
         "\n",
         "model_6 = tf.keras.Sequential([\n",
         "        sentence_encoder_layer,\n",
-        "        #layers.Dense(64, activation=\"relu\"),\n",
+        "        layers.Dense(64, activation=\"relu\"),\n",
         "        layers.Dense(1, activation=\"sigmoid\", name=\"output_layer\")                                       \n",
         "], name=\"model_6_USE\")\n",
         "\n",
@@ -3550,23 +3550,23 @@
         "                optimizer=tf.keras.optimizers.Adam(),\n",
         "                metrics=[\"accuracy\"])"
       ],
-      "execution_count": 109,
+      "execution_count": 110,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FvM57WHg7sHr",
-        "outputId": "f9d4e340-c62d-4c85-89cc-936d68c3da23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FvM57WHg7sHr",
+        "outputId": "a7a8ae35-f008-4449-875c-a5d84b108475"
       },
       "source": [
         "# Check model summary\n",
         "model_6.summary()"
       ],
-      "execution_count": 107,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
@@ -3577,9 +3577,9 @@
             "=================================================================\n",
             "USE (KerasLayer)             (None, 512)               256797824 \n",
             "_________________________________________________________________\n",
-            "dense_7 (Dense)              (None, 64)                32832     \n",
+            "dense_10 (Dense)             (None, 64)                32832     \n",
             "_________________________________________________________________\n",
-            "dense_8 (Dense)              (None, 1)                 65        \n",
+            "output_layer (Dense)         (None, 1)                 65        \n",
             "=================================================================\n",
             "Total params: 256,830,721\n",
             "Trainable params: 32,897\n",
@@ -3593,11 +3593,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wog0ULzH7vr4",
-        "outputId": "0bd40b92-c300-4566-f8c2-3cd420453ad6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wog0ULzH7vr4",
+        "outputId": "41b5bc92-fd6f-414c-bbe2-193bc5ae4928"
       },
       "source": [
         "# Train a classifer model on top of USE pretrained embeddings\n",
@@ -3608,22 +3608,22 @@
         "                              callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
         "                                                                     experiment_name=\"tf_hub_sentence_encoder\")])\n"
       ],
-      "execution_count": 108,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Saving TensorBoard log files to: model_logs/tf_hub_sentence_encoder/20210806-053619\n",
+            "Saving TensorBoard log files to: model_logs/tf_hub_sentence_encoder/20210806-053718\n",
             "Epoch 1/5\n",
-            "215/215 [==============================] - 5s 17ms/step - loss: 0.5067 - accuracy: 0.7755 - val_loss: 0.4435 - val_accuracy: 0.8018\n",
+            "215/215 [==============================] - 4s 17ms/step - loss: 0.5050 - accuracy: 0.7787 - val_loss: 0.4489 - val_accuracy: 0.7913\n",
             "Epoch 2/5\n",
-            "215/215 [==============================] - 2s 11ms/step - loss: 0.4147 - accuracy: 0.8137 - val_loss: 0.4363 - val_accuracy: 0.8110\n",
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.4133 - accuracy: 0.8149 - val_loss: 0.4390 - val_accuracy: 0.8058\n",
             "Epoch 3/5\n",
-            "215/215 [==============================] - 2s 12ms/step - loss: 0.4002 - accuracy: 0.8240 - val_loss: 0.4347 - val_accuracy: 0.8097\n",
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.4002 - accuracy: 0.8241 - val_loss: 0.4320 - val_accuracy: 0.8163\n",
             "Epoch 4/5\n",
-            "215/215 [==============================] - 2s 11ms/step - loss: 0.3916 - accuracy: 0.8291 - val_loss: 0.4272 - val_accuracy: 0.8136\n",
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.3922 - accuracy: 0.8266 - val_loss: 0.4377 - val_accuracy: 0.8097\n",
             "Epoch 5/5\n",
-            "215/215 [==============================] - 3s 12ms/step - loss: 0.3838 - accuracy: 0.8313 - val_loss: 0.4282 - val_accuracy: 0.8058\n"
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.3859 - accuracy: 0.8316 - val_loss: 0.4273 - val_accuracy: 0.8150\n"
           ],
           "name": "stdout"
         }
@@ -3632,57 +3632,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dB3T5Z-j8YxA",
-        "outputId": "e90eff7b-17ab-4683-8fcc-2a057d0dcf5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dB3T5Z-j8YxA",
+        "outputId": "7ed96c6d-268b-4501-e7a6-748d74b23769"
       },
       "source": [
         "# Check the USE TF Hub Model predictions\n",
         "model_6_pred_probs = model_6.predict(val_sentences)\n",
         "model_6_pred_probs[:10]"
       ],
-      "execution_count": 101,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.39113456],\n",
-              "       [0.68845195],\n",
-              "       [0.8499171 ],\n",
-              "       [0.3493935 ],\n",
-              "       [0.6480116 ],\n",
-              "       [0.74636394],\n",
-              "       [0.8093507 ],\n",
-              "       [0.8459836 ],\n",
-              "       [0.7521083 ],\n",
-              "       [0.19804439]], dtype=float32)"
+              "array([[0.22189014],\n",
+              "       [0.8038323 ],\n",
+              "       [0.9914262 ],\n",
+              "       [0.22010033],\n",
+              "       [0.7410024 ],\n",
+              "       [0.7623516 ],\n",
+              "       [0.9808641 ],\n",
+              "       [0.979792  ],\n",
+              "       [0.9577204 ],\n",
+              "       [0.09454457]], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 113
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-LrGfl6z8i5h",
-        "outputId": "d3c4d068-840f-4e4a-b38a-190ff0328498",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-LrGfl6z8i5h",
+        "outputId": "f8448cff-32a3-4299-ef96-d31986ace7f0"
       },
       "source": [
         "# Convert prediction probabilities to labels\n",
         "model_6_preds = tf.squeeze(tf.round(model_6_pred_probs))\n",
         "model_6_preds[:10]"
       ],
-      "execution_count": 102,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3694,18 +3694,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 114
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CU-_n54N8vrJ",
-        "outputId": "252093dc-a423-4fce-8bc3-a87f010aa80a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CU-_n54N8vrJ",
+        "outputId": "71ba4f19-d644-4f11-b0fd-76042527bd78"
       },
       "source": [
         "# Calculate the USE TF model performance\n",
@@ -3713,38 +3713,38 @@
         "                                    y_pred=model_6_preds)\n",
         "model_6_results"
       ],
-      "execution_count": 104,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'accuracy': 79.13385826771653,\n",
-              " 'f1': 0.790332908959664,\n",
-              " 'precision': 0.791659328034437,\n",
-              " 'recall': 0.7913385826771654}"
+              "{'accuracy': 81.49606299212599,\n",
+              " 'f1': 0.8142251446314539,\n",
+              " 'precision': 0.8152722931679139,\n",
+              " 'recall': 0.8149606299212598}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 115
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sQK6M9jZ9CLd",
-        "outputId": "03083f3f-639f-4f0c-90f6-e69686036c07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sQK6M9jZ9CLd",
+        "outputId": "6251e3f8-695b-4f29-fb67-d2e2825aa437"
       },
       "source": [
         "baseline_results"
       ],
-      "execution_count": 105,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3759,9 +3759,165 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 105
+          "execution_count": 116
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tsitrrrU_Osf",
+        "outputId": "399ff851-7624-4ac4-ecd1-ab6522baedb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(train_df_shuffled)"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7613"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 118
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YKpSBtn-_x9W"
+      },
+      "source": [
+        "## Model 7 : TF HUb Pretrained USE but with 10% of training data\n",
+        "\n",
+        "Transfer learnig really helps when you don't have a large dataset.\n",
+        "To see how our model performs on a smaller dataset, let's replicate `model_6` except we'll train it on 10% of the train data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2nAx1TlbEHE7"
+      },
+      "source": [
+        "# Create subsets of 10% of the training data\n",
+        "train_10_percent = train_df_shuffled[[\"text\", \"target\"]].sample(frac=0.1, random_state=42)\n",
+        "#train_10_percent.head(), len(train_10_percent)\n",
+        "\n",
+        "train_sentences_10_percent = train_10_percent[\"text\"].to_list()\n",
+        "train_labels_10_percent = train_10_percent[\"target\"].to_list()\n"
+      ],
+      "execution_count": 122,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1w_vfLDLEwcD",
+        "outputId": "ea9dec7d-ba07-4202-b360-ce77e0f01d7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(train_sentences_10_percent), len(train_labels_10_percent)"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(761, 761)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iYMby9qYE9gS",
+        "outputId": "e959e2b0-1fbf-4c6f-8b98-c9000e6b0f6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the nuber of targets in our subset of data\n",
+        "train_10_percent[\"target\"].value_counts()"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    413\n",
+              "1    348\n",
+              "Name: target, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g5GrnbM2FOsq",
+        "outputId": "2755caa8-dcde-4990-86a0-dcd539508b54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_df_shuffled[\"target\"].value_counts()"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    4342\n",
+              "1    3271\n",
+              "Name: target, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SmWJ4renFWOR"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
