--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -3766,11 +3766,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tsitrrrU_Osf",
-        "outputId": "399ff851-7624-4ac4-ecd1-ab6522baedb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tsitrrrU_Osf",
+        "outputId": "399ff851-7624-4ac4-ecd1-ab6522baedb5"
       },
       "source": [
         "len(train_df_shuffled)"
@@ -3822,11 +3822,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1w_vfLDLEwcD",
-        "outputId": "ea9dec7d-ba07-4202-b360-ce77e0f01d7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1w_vfLDLEwcD",
+        "outputId": "ea9dec7d-ba07-4202-b360-ce77e0f01d7a"
       },
       "source": [
         "len(train_sentences_10_percent), len(train_labels_10_percent)"
@@ -3850,11 +3850,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iYMby9qYE9gS",
-        "outputId": "e959e2b0-1fbf-4c6f-8b98-c9000e6b0f6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iYMby9qYE9gS",
+        "outputId": "e959e2b0-1fbf-4c6f-8b98-c9000e6b0f6a"
       },
       "source": [
         "# Check the nuber of targets in our subset of data\n",
@@ -3881,11 +3881,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g5GrnbM2FOsq",
-        "outputId": "2755caa8-dcde-4990-86a0-dcd539508b54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g5GrnbM2FOsq",
+        "outputId": "2755caa8-dcde-4990-86a0-dcd539508b54"
       },
       "source": [
         "train_df_shuffled[\"target\"].value_counts()"
@@ -3914,7 +3914,33 @@
         "id": "SmWJ4renFWOR"
       },
       "source": [
-        ""
+        "# Create the model7  (same  as model 6) but fit with 10% training set\n",
+        "# Create model using the Sequential API\n",
+        "\n",
+        "model_7 = tf.keras.Sequential([\n",
+        "       sentence_encoder_layer,\n",
+        "       layer.Dense(64, activation=\"relu\"),\n",
+        "       layer.Dense(1, activation=\"sigmoid\", name=\"output_layer\")                        \n",
+        "], name=\"model_7_USE_10_percent\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Compile the model\n",
+        "model_7.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PF-0OduQGLXv"
+      },
+      "source": [
+        "# Fit the model using 10% training set"
       ],
       "execution_count": null,
       "outputs": []
