239. Model 7: Building, training and evaluating a transfer learning model on 10% data

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -3909,41 +3909,233 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "SmWJ4renFWOR"
+        "id": "PF-0OduQGLXv"
       },
       "source": [
-        "# Create the model7  (same  as model 6) but fit with 10% training set\n",
-        "# Create model using the Sequential API\n",
+        "To recreate a model the same as previous model you've created, you can use the `tf.keras.model.clone_model()` method, see more here:\n",
         "\n",
-        "model_7 = tf.keras.Sequential([\n",
-        "       sentence_encoder_layer,\n",
-        "       layer.Dense(64, activation=\"relu\"),\n",
-        "       layer.Dense(1, activation=\"sigmoid\", name=\"output_layer\")                        \n",
-        "], name=\"model_7_USE_10_percent\")\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/models/clone_model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A689s78VG7uL"
+      },
+      "source": [
+        "# Create the model 7 (clone from model 6)\n",
         "\n",
-        "\n",
-        "\n",
+        "#model_7 = tf.keras.models.clone_model(model_6)\n",
         "\n",
         "# Compile the model\n",
-        "model_7.compile(loss=\"binary_crossentropy\",\n",
-        "                optimizer=tf.keras.optimizers.Adam(),\n",
-        "                metrics=[\"accuracy\"])"
+        "#model_7.compile(loss=\"binary_crossentropy\",\n",
+        "#                optimizer=tf.keras.optimizers.Adam(),\n",
+        "#                metrics=[\"accuracy\"])"
       ],
-      "execution_count": null,
+      "execution_count": 129,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PF-0OduQGLXv"
+        "id": "E7PYTE2oHyjV"
       },
       "source": [
-        "# Fit the model using 10% training set"
+        "# Create the model7  (same  as model 6) but fit with 10% training set\n",
+        "\n",
+        "model_7 = tf.keras.Sequential([\n",
+        "       sentence_encoder_layer,\n",
+        "       layers.Dense(64, activation=\"relu\"),\n",
+        "       layers.Dense(1, activation=\"sigmoid\", name=\"output_layer\")                        \n",
+        "], name=\"model_7_USE\")\n",
+        "\n",
+        "model_7.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n"
       ],
-      "execution_count": null,
+      "execution_count": 136,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eMlQYtN_HY6p",
+        "outputId": "a764676f-7ca9-4f9e-fc6d-33d63f314b20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get a summary(will be same as model _6)\n",
+        "model_7.summary()"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_7_USE\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "USE (KerasLayer)             (None, 512)               256797824 \n",
+            "_________________________________________________________________\n",
+            "dense_13 (Dense)             (None, 64)                32832     \n",
+            "_________________________________________________________________\n",
+            "output_layer (Dense)         (None, 1)                 65        \n",
+            "=================================================================\n",
+            "Total params: 256,830,721\n",
+            "Trainable params: 32,897\n",
+            "Non-trainable params: 256,797,824\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KIHY5Pk8Hkr0",
+        "outputId": "8f9b7710-a591-419a-b249-4188a7e11515",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the model (using the 10% percent train_data subsets)\n",
+        "model_7_results = model_7.fit(train_sentences_10_percent,\n",
+        "                              y = train_labels_10_percent,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
+        "                                                                     experiment_name=\"tf_hub_sentence_encoder_percent\")])"
+      ],
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/tf_hub_sentence_encoder_percent/20210806-062708\n",
+            "Epoch 1/5\n",
+            "24/24 [==============================] - 3s 78ms/step - loss: 0.6696 - accuracy: 0.6807 - val_loss: 0.6281 - val_accuracy: 0.7861\n",
+            "Epoch 2/5\n",
+            "24/24 [==============================] - 1s 24ms/step - loss: 0.5947 - accuracy: 0.7779 - val_loss: 0.5492 - val_accuracy: 0.7953\n",
+            "Epoch 3/5\n",
+            "24/24 [==============================] - 0s 20ms/step - loss: 0.5201 - accuracy: 0.7924 - val_loss: 0.4828 - val_accuracy: 0.8018\n",
+            "Epoch 4/5\n",
+            "24/24 [==============================] - 0s 19ms/step - loss: 0.4660 - accuracy: 0.8081 - val_loss: 0.4393 - val_accuracy: 0.8150\n",
+            "Epoch 5/5\n",
+            "24/24 [==============================] - 0s 20ms/step - loss: 0.4296 - accuracy: 0.8134 - val_loss: 0.4100 - val_accuracy: 0.8228\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fXlwru6BIhkv",
+        "outputId": "43626999-2f17-4747-d998-0fd75bf7266d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions with the model trained on 10% of the data\n",
+        "model_7_pred_probs = model_7.predict(val_sentences)\n",
+        "model_7_pred_probs[:10]"
+      ],
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.26687288],\n",
+              "       [0.8191197 ],\n",
+              "       [0.90643626],\n",
+              "       [0.3401912 ],\n",
+              "       [0.8320251 ],\n",
+              "       [0.8553874 ],\n",
+              "       [0.92063993],\n",
+              "       [0.9504687 ],\n",
+              "       [0.85991067],\n",
+              "       [0.08667554]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6tSCf2pRIqcO",
+        "outputId": "9c2ddb78-c00e-477f-f338-6822ffa36db3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the model preds\n",
+        "model_7_preds = tf.squeeze(tf.round(model_7_pred_probs))\n",
+        "model_7_preds[:10]"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 1., 1., 1., 1., 1., 0.], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dh2NOeVXIzEe",
+        "outputId": "fe35cb8a-e2c5-4da8-beb2-87a026c7f0a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate model 7 peformance\n",
+        "model_7_results = calculate_results(y_true=val_labels,\n",
+        "                                    y_pred=model_7_preds)\n",
+        "model_7_results"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 82.28346456692913,\n",
+              " 'f1': 0.8225735439839028,\n",
+              " 'precision': 0.8226583633757248,\n",
+              " 'recall': 0.8228346456692913}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 142
+        }
+      ]
     }
   ]
 }
