242. Uploading our model's training logs to TensorBoard and comparing them

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -4628,17 +4628,19 @@
       },
       "source": [
         "Now I've ran the cell above the modelling experiments are available at TensorBoard.dev\n",
-        "https://tensorboard.dev/experiment/EeYv3HwiQpyuG2gQipBGhA/\n"
+        "https://tensorboard.dev/experiment/EeYv3HwiQpyuG2gQipBGhA/\n",
+        "\n",
+        ">**Resources** : TensorBoard is great for quickly tracking experiments, but for larger scale experiments and a whole bunch more tracking options, check out Weights & Biases : https://wandb.ai/site"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p36_vcElX6j3",
-        "outputId": "27ddc634-2e38-4858-95b2-d520c9934213",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p36_vcElX6j3",
+        "outputId": "27ddc634-2e38-4858-95b2-d520c9934213"
       },
       "source": [
         "# If you need to delete an experiment from tensorboard, you can run the following\n",
@@ -4670,11 +4672,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LQMNvesQY-EJ",
-        "outputId": "224875db-cd72-45f0-c55b-4667b9956340",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LQMNvesQY-EJ",
+        "outputId": "224875db-cd72-45f0-c55b-4667b9956340"
       },
       "source": [
         "# If you need to delete an experiment from TensorBoard, you can run the following :-\n",
@@ -4691,6 +4693,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c2uXt55RZvA_"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
